@@ -1,0 +1,7 @@
+#!/bin/bash
+# Install prerequisites for python pyedit pro
+sudo apt install python                      
+sudo apt install python-gi
+sudo apt install python-gi-cairo
+
+
